# zkfriendlyhashzoo-forked

./: Cargo.toml  README.md  extract_monolith_bench.py
bellman/: Cargo.toml  Readme.md
bellman/benches/: merkle_proof_bls12.rs  merkle_proof_bn256.rs  perm_proof_bls12.rs  perm_proof_bn256.rs  plain_bls12.rs  plain_bn256.rs
bellman/examples/: gmimc.rs  gmimc_mt.rs  grendel.rs  grendel_mt.rs  griffin.rs  griffin_mt.rs  neptune.rs  neptune_mt.rs  poseidon.rs  poseidon_mt.rs  rescue.rs  rescue_mt.rs
bellman/src/: circuits.rs  constraint_builder.rs  lib.rs  merkle_groth.rs  merkle_tree.rs  mt_circuit.rs  perm_groth.rs  r1cs.rs  utils.rs
bellman/src/gmimc/: Readme.md  gmimc.rs  gmimc_circuit.rs  gmimc_instance_bls12.rs  gmimc_instance_bn256.rs  gmimc_params.rs  gmimc_r1cs.rs  mod.rs
bellman/src/grendel/: Readme.md  grendel.rs  grendel_circuit.rs  grendel_instance_bls12.rs  grendel_instance_bn256.rs  grendel_params.rs  grendel_r1cs.rs  mod.rs
bellman/src/griffin/: Readme.md  griffin.rs  griffin_circuit.rs  griffin_instances.rs  griffin_params.rs  griffin_r1cs.rs  mod.rs
bellman/src/neptune/: Readme.md  mod.rs  neptune.rs  neptune_circuit.rs  neptune_instances.rs  neptune_params.rs  neptune_r1cs.rs
bellman/src/poseidon/: Readme.md  mod.rs  poseidon.rs  poseidon_circuit.rs  poseidon_instance_bls12.rs  poseidon_instance_bn256.rs  poseidon_params.rs  poseidon_r1cs.rs
bellman/src/rescue/: Readme.md  mod.rs  rescue.rs  rescue_circuit.rs  rescue_instance_bls12.rs  rescue_instance_bn256.rs  rescue_params.rs  rescue_r1cs.rs
benches/: fp4_bls12.rs  fp4_bn256.rs  rc_bls12.rs  rc_bn256.rs
bounties/: Cargo.toml  Readme.md
bounties/examples/feistel_mimc/: feistel_mimc_easy1.rs  feistel_mimc_easy2.rs  feistel_mimc_hard1.rs  feistel_mimc_hard2.rs  feistel_mimc_medium.rs
bounties/examples/poseidon/: poseidon_easy1.rs  poseidon_easy2.rs  poseidon_hard1.rs  poseidon_hard2.rs  poseidon_medium.rs
bounties/examples/reinforced_concrete/: reinforced_concrete_easy.rs  reinforced_concrete_hard.rs  reinforced_concrete_medium.rs
bounties/examples/rescue/: rescue_easy1.rs  rescue_easy2.rs  rescue_hard1.rs  rescue_hard2.rs  rescue_medium.rs
bounties/src/: lib.rs
bounties/src/feistel_mimc/: feistel_mimc.rs  feistel_mimc_instances.rs  feistel_mimc_params.rs  mod.rs
bounties/src/fields/: field48.rs  field56.rs  field64.rs  mod.rs  utils.rs
bounties/src/poseidon/: mod.rs  poseidon.rs  poseidon_instances.rs  poseidon_params.rs
bounties/src/reinforced_concrete/: reinforced_concrete.rs  reinforced_concrete_instances.rs  reinforced_concrete_params.rs
bounties/src/rescue_prime/: mod.rs  rescue_prime.rs  rescue_prime_instances.rs  rescue_prime_params.rs
examples/: rc_bls12.rs  rc_bn256.rs
plain_impls/: Cargo.toml  Readme.md  key1.key
plain_impls/benches/: fp4_st.rs  fp_bls12.rs  fp_bn256.rs  fp_st.rs  hashes.rs  matrix_test.rs  monolith_const_f64.rs  monolith_f64.rs  mt_bls12.rs  mt_bn256.rs  mt_f64.rs  mt_hashes.rs  mt_st.rs  plain_goldilocks.rs  plain_mersenne.rs  rc_bls12.rs  rc_bn256.rs  rc_st.rs
plain_impls/examples/: ps_bls12.rs  ps_bn256.rs  ps_gl_12.rs  ps_gl_8.rs  ps_gl_const_12.rs  ps_gl_const_8.rs  ps_mer_16.rs  ps_mer_24.rs  ps_mer_const_16.rs  ps_mer_const_24.rs  ps_st.rs  rc_st.rs
plain_impls/src/: lib.rs
plain_impls/src/feistel_mimc/: feistel_mimc.rs  feistel_mimc_instances.rs  feistel_mimc_params.rs
plain_impls/src/fields/: bls12.rs  bn256.rs  const_f64.rs  mod.rs  utils.rs  utils4.rs
plain_impls/src/gmimc/: gmimc.rs  gmimc_instance_goldilocks.rs  gmimc_params.rs  mod.rs
plain_impls/src/griffin/: griffin.rs  griffin_instances.rs  griffin_params.rs  mod.rs
plain_impls/src/merkle_tree/: merkle_tree_fp_t.rs  mod.rs
plain_impls/src/monolith_31/: mds_16.rs  mds_16_generic.rs  mds_24.rs  mds_24_generic.rs  mod.rs  monolith_31.rs  monolith_31_instances.rs  monolith_31_params.rs
plain_impls/src/monolith_64/: mds_12.rs  mds_8.rs  mod.rs  monolith_64.rs  monolith_64_instances.rs  monolith_64_params.rs
plain_impls/src/neptune/: neptune.rs  neptune_instances.rs  neptune_params.rs
plain_impls/src/pedersen_hash/: constants.rs  mod.rs  pedersen_hash.rs  test_vectors.rs
plain_impls/src/poseidon/: mod.rs  poseidon.rs  poseidon_instance_bls12.rs  poseidon_instance_bn256.rs  poseidon_instance_goldilocks.rs  poseidon_instance_goldilocks_const.rs  poseidon_instance_mersenne.rs  poseidon_instance_mersenne_const.rs  poseidon_instance_st.rs  poseidon_params.rs
plain_impls/src/poseidon2/: mod.rs  poseidon2.rs  poseidon2_instance_bls12.rs  poseidon2_instance_bn256.rs  poseidon2_instance_goldilocks.rs  poseidon2_instance_goldilocks_const.rs  poseidon2_instance_mersenne.rs  poseidon2_instance_mersenne_const.rs  poseidon2_params.rs
plain_impls/src/reinforced_concrete/: reinforced_concrete_params.rs
plain_impls/src/reinforced_concrete_st/: mod.rs  reinforced_concrete_st.rs  reinforced_concrete_st_instances.rs  reinforced_concrete_st_params.rs
plain_impls/src/rescue/: mod.rs  rescue.rs  rescue_instance_bls12.rs  rescue_instance_bn256.rs  rescue_instance_st.rs  rescue_params.rs
plain_impls/src/rescue_prime/: mod.rs  rescue_prime.rs  rescue_prime_instance_bls12.rs  rescue_prime_instance_bn256.rs  rescue_prime_instance_goldilocks.rs  rescue_prime_instance_st.rs  rescue_prime_params.rs
plain_impls/src/sinsemilla/: constants.rs  mod.rs  sinsemilla.rs  sinsemilla_s.rs  spec.rs
src/: lib.rs  utils.rs
src/fields/: const_f31.rs  f31.rs  f64.rs  mod.rs  st.rs  utils.rs
src/merkle_tree/: merkle_tree_fp.rs
src/reinforced_concrete/: mod.rs  reinforced_concrete.rs  reinforced_concrete_instances.rs
