[package]
name = "zkhash-bounties"
version = "0.1.0"
authors = ["Roman Walch <roman.walch@iaik.tugraz.at>"]
description = "Rust implementaitons of zk permuations"
edition = "2018"

[dependencies]
ff = {package = "ff_ce", version = "0.13", features = ["derive"] }
rand = "0.4" # held back for ff_ce
lazy_static = "1.4"
sha3 = "0.9"

[[example]]
name = "poseidon_easy1"
path = "examples/poseidon/poseidon_easy1.rs"

[[example]]
name = "poseidon_easy2"
path = "examples/poseidon/poseidon_easy2.rs"

[[example]]
name = "poseidon_medium"
path = "examples/poseidon/poseidon_medium.rs"

[[example]]
name = "poseidon_hard1"
path = "examples/poseidon/poseidon_hard1.rs"

[[example]]
name = "poseidon_hard2"
path = "examples/poseidon/poseidon_hard2.rs"

[[example]]
name = "rescue_easy1"
path = "examples/rescue/rescue_easy1.rs"

[[example]]
name = "rescue_easy2"
path = "examples/rescue/rescue_easy2.rs"

[[example]]
name = "rescue_medium"
path = "examples/rescue/rescue_medium.rs"

[[example]]
name = "rescue_hard1"
path = "examples/rescue/rescue_hard1.rs"

[[example]]
name = "rescue_hard2"
path = "examples/rescue/rescue_hard2.rs"

[[example]]
name = "feistel_mimc_easy1"
path = "examples/feistel_mimc/feistel_mimc_easy1.rs"

[[example]]
name = "feistel_mimc_easy2"
path = "examples/feistel_mimc/feistel_mimc_easy2.rs"

[[example]]
name = "feistel_mimc_medium"
path = "examples/feistel_mimc/feistel_mimc_medium.rs"

[[example]]
name = "feistel_mimc_hard1"
path = "examples/feistel_mimc/feistel_mimc_hard1.rs"

[[example]]
name = "feistel_mimc_hard2"
path = "examples/feistel_mimc/feistel_mimc_hard2.rs"

[[example]]
name = "reinforced_concrete_easy"
path = "examples/reinforced_concrete/reinforced_concrete_easy.rs"

[[example]]
name = "reinforced_concrete_medium"
path = "examples/reinforced_concrete/reinforced_concrete_medium.rs"

[[example]]
name = "reinforced_concrete_hard"
path = "examples/reinforced_concrete/reinforced_concrete_hard.rs"

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
debug = true
opt-level = 3
