[package]
name = "zkhash"
version = "0.1.0"
authors = ["Roman Walch <roman.walch@iaik.tugraz.at>"]
description = "Rust implementaiton of different hash functions for ZK"
edition = "2018"

[dependencies]
ff = { package = "ff_ce", version = "0.14", features = ["derive"] }
serde = "1.0"
rand = "0.4"                                                        # held back for ff_ce
lazy_static = "1.4"
generic-array = "0.14"
cfg-if = "1.0"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["sha3"] }
sha2 = "0.10"
blake2 = "0.10"
# for sinsemilla:
group = "0.13"
halo2 = "=0.1.0-beta.2"
pasta_curves = "0.5"
subtle = "2.3"
random = { package = "rand", version = "0.8" }
# for pederson_hash:
group_ped = { package = "group", version = "0.12.1", features = [
    "wnaf-memuse",
] }
bitvec = "1.0"
byteorder = "1.4"
jubjub = "0.9"
bls12_381 = "0.7"
expand = "0.3.0"

[dev-dependencies]
criterion = "0.4"
# for tip5 and rescue prime optimized
twenty-first = { git = "https://github.com/Neptune-Crypto/twenty-first", rev = "4e5017092249ef2990d9f897afd60e3ec0d2c487" }
winterfell = { git = "https://github.com/Nashtare/winterfell", rev = "884dfacfb10c631944a71ab4298f5458cc33eaef" }
winter-utils = { git = "https://github.com/Nashtare/winterfell", rev = "884dfacfb10c631944a71ab4298f5458cc33eaef", package = "winter-rand-utils" }

[features]
default = []
asm = ["ff/asm_derive", "sha2/asm", "blake2/simd_asm"]

[[bench]]
name = "rc_bls12"
harness = false

[[bench]]
name = "rc_bn256"
harness = false

[[bench]]
name = "rc_st"
harness = false

[[bench]]
name = "monolith_f64"
harness = false

[[bench]]
name = "monolith_const_f64"
harness = false

[[bench]]
name = "plain_goldilocks"
harness = false

[[bench]]
name = "plain_mersenne"
harness = false

[[bench]]
name = "fp_bls12"
harness = false

[[bench]]
name = "fp_bn256"
harness = false

[[bench]]
name = "fp_st"
harness = false

[[bench]]
name = "fp4_bls12"
harness = false

[[bench]]
name = "fp4_bn256"
harness = false

[[bench]]
name = "fp4_st"
harness = false

[[bench]]
name = "hashes"
harness = false

[[bench]]
name = "mt_bls12"
harness = false

[[bench]]
name = "mt_bn256"
harness = false

[[bench]]
name = "mt_st"
harness = false

[[bench]]
name = "mt_f64"
harness = false

[[bench]]
name = "mt_hashes"
harness = false

[[bench]]
name = "matrix_test"
harness = false

[[example]]
name = "rc_bls12"
path = "examples/rc_bls12.rs"

[[example]]
name = "rc_bn256"
path = "examples/rc_bn256.rs"

[[example]]
name = "rc_st"
path = "examples/rc_st.rs"

[[example]]
name = "ps_bls12"
path = "examples/ps_bls12.rs"

[[example]]
name = "ps_bn256"
path = "examples/ps_bn256.rs"

[[example]]
name = "ps_gl_12"
path = "examples/ps_gl_12.rs"

[[example]]
name = "ps_gl_const_12"
path = "examples/ps_gl_const_12.rs"

[[example]]
name = "ps_gl_8"
path = "examples/ps_gl_8.rs"

[[example]]
name = "ps_gl_const_8"
path = "examples/ps_gl_const_8.rs"

[[example]]
name = "ps_mer_16"
path = "examples/ps_mer_16.rs"

[[example]]
name = "ps_mer_const_16"
path = "examples/ps_mer_const_16.rs"

[[example]]
name = "ps_mer_24"
path = "examples/ps_mer_24.rs"

[[example]]
name = "ps_mer_const_24"
path = "examples/ps_mer_const_24.rs"

[[example]]
name = "ps_st"
path = "examples/ps_st.rs"

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

[profile.bench]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3
